refactor: generate api ready for user createUser and findAll
